src/objects/Map_Parameter__c.object
<CustomObject>
    <description>Defines the starting point for a map that can be shown on a dashboard</description>
    <fields>
        <fullName>Dashboard_Section__c</fullName>
        <description>The section of a dashboard that this map is to be displayed on</description>
        <inlineHelpText>Select the dashboard section that this map belongs to</inlineHelpText>
        <label>Dashboard Section</label>
        <referenceTo>Dashboard_Section__c</referenceTo>
        <relationshipLabel>Map Parameters</relationshipLabel>
        <relationshipName>Map_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>The keyword to be used in a like search when mapping client locations, search logs, etc</description>
        <inlineHelpText>Select the keyword that is used to decide what markers are to be displayed on this map. Only to be used with Client Location, Search Log and Metric Maps. Leave blank if using another sObject</inlineHelpText>
        <label>Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>The latitude that this map will start its display on</description>
        <inlineHelpText>Enter the latitude that the map should start on</inlineHelpText>
        <label>Latitude</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>The default starting longitude for the map when it is first loaded</description>
        <inlineHelpText>Enter the longitude that the map will start on when it is first displayed. Decimal format</inlineHelpText>
        <label>Longitude</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Marker_Source_Class__c</fullName>
        <description>Defines the Visualforce class that will be used to retrieve the Map Markers for this Map Parameter. This will be used if the Type_Of_sObject__c is set to None. The class is a normal visualforce class, but must implement MapComponentController.IMapMarkerSource</description>
        <inlineHelpText>Defines the Visualforce class that will be used to retrieve the Map Markers for this Map Parameter. This will be used if the Type_Of_sObject__c is set to None. The class must implement MapComponentController.IMapMarkerSource</inlineHelpText>
        <label>Map Marker Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splitter__c</fullName>
        <description>What should the markers for the default sObject be divided by</description>
        <inlineHelpText>Select the field that the markers will be divided by</inlineHelpText>
        <label>Splitter</label>
        <picklist>
            <picklistValues>
                <fullName>Gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poverty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title for the map</description>
        <inlineHelpText>Enter the title for the map</inlineHelpText>
        <label>Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_Of_sObject__c</fullName>
        <description>What is the type of object that the map should show when it is first loaded</description>
        <inlineHelpText>Select the type of object that the map will show when it is first loaded</inlineHelpText>
        <label>Type Of sObject</label>
        <picklist>
            <picklistValues>
                <fullName>CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FarmerLand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT CIW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT Farmer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zoom__c</fullName>
        <defaultValue>8</defaultValue>
        <description>The initial zoom that the map starts at</description>
        <label>Zoom</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Map Parameter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP{0000000000}</displayFormat>
        <label>Map Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>